Updated files from testing switch to master

--- a/templates/index.html
+++ b/templates/index.html
@@ -210,17 +210,12 @@
 
     <!-- <a onclick="renderBar()"></a> -->
 
-    <script src="bar.js"></script>
+    <script src="/static/js/bar.js"></script>
     <!-- <script src="bar.js"></script>
       <script src="line.js"></script> -->
 				  
 				  
-				  
-				  
-				  
-				  
-				  
-				    <div class="container clearfix">
+				  <div class="container clearfix">
 			
 					<div class="clear"></div>
 
