--- a/templates/index.html
+++ b/templates/index.html
@@ -1,343 +1,11 @@
-<!DOCTYPE html>
-<html dir="ltr" lang="en-US">
+<!doctype html>
+<html>
 <head>
-
-	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-
-	<!-- Stylesheets
-	============================================= -->
-	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,400i,700|Raleway:300,400,500,600,700|Crete+Round:400i" rel="stylesheet" type="text/css" />
-	<link rel="stylesheet" href="/static/css/bootstrap.css" type="text/css" />
-	<link rel="stylesheet" href="/static/css/style.css" type="text/css" />
-	<link rel="stylesheet" href="/static/css/dark.css" type="text/css" />
-	<link rel="stylesheet" href="/static/css/font-icons.css" type="text/css" />
-	<link rel="stylesheet" href="/static/css/animate.css" type="text/css" />
-	<link rel="stylesheet" href="/static/css/magnific-popup.css" type="text/css" />
-
-	<link rel="stylesheet" href="/static/css/responsive.css" type="text/css" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-
-	<!-- Document Title
-	============================================= -->
-	<title>Home Buyout Program</title>
-
+<meta charset="utf-8">
+<title>Untitled Document</title>
 </head>
 
-<body class="stretched">
-
-	<!-- Document Wrapper
-	============================================= -->
-	<div id="wrapper" class="clearfix">
-
-		<!-- Header
-		============================================= -->
-		<header id="header" class="split-menu">
-
-			<div id="header-wrap">
-
-				<div class="container clearfix">
-
-					<div id="primary-menu-trigger"><i class="icon-reorder"></i></div>
-
-					<!-- Logo
-					============================================= -->
-					<div id="logo">
-						<a href="index.html" class="standard-logo" data-dark-logo="/static/img/logo-dark.png"><img src="/static/img/logo.png" alt="Logo"></a>
-						<a href="index.html" class="retina-logo" data-dark-logo="/static/img/logo-dark@2x.png"><img src="/static/img/logo@2x.png" alt="Logo"></a>
-					</div><!-- #logo end -->
-
-					<!-- Primary Navigation
-					============================================= -->
-					<nav id="primary-menu">
-
-						<ul class="one-page-menu">
-							<li class="current"><a href="#" data-href="#section-home"><div>Home</div></a></li>
-							<li><a href="#" data-href="#section-search"><div>Search</div></a></li>
-							<li><a href="#" data-href="#section-alerts"><div>Alerts</div></a></li>
-						</ul>
-						<ul class="one-page-menu">
-							<li><a href="#" data-href="#section-analytics"><div>Analytics</div></a></li>
-							<li><a href="#" data-href="#section-faqs"><div>FAQS</div></a></li>
-							<li><a href="#" data-href="#section-about"><div>About</div></a></li>
-						</ul>
-
-					</nav><!-- #primary-menu end -->
-
-				</div>
-
-			</div>
-
-		</header><!-- #header end -->
-
-		<!-- Content
-		============================================= -->
-		<section id="content">
-
-			<div class="content-wrap">
-
-			  <div class="container clearfix">
-				  
-				  	<div class="clear"></div>
-
-					<div id="section-home" class="heading-block title-center nobottomborder page-section">
-						<h1>Home</h1>
-						<span>Tag Line</span>
-					</div>
-
-					<div class="clear"></div>
-
-					<div id="section-search" class="heading-block title-center nobottomborder page-section">
-						<h2>Search</h2>
-					</div>
-
-					<div></div>
-
-					<div class="clear"></div>
-
-					<div id="section-alerts" class="heading-block title-center nobottomborder page-section">
-						<h2>Alerts</h2>
-					</div>
-				  
-				    <div></div>
-					
-					<!-- Contact Form
-					============================================= -->
-					<div class="col_half">
-
-						<div class="fancy-title title-dotted-border">
-							<h3>Send New Listing Email Alert</h3>
-						</div>
-
-						<div class="form-widget">
-
-							<div class="form-result"></div>
-
-							<form class="nobottommargin" id="template-contactform" name="template-contactform" action="include/form.php" method="post">
-
-								<div class="form-process"></div>
-
-								<div class="col_one_third">
-									<label for="template-contactform-name">Name <small>*</small></label>
-									<input type="text" id="template-contactform-name" name="template-contactform-name" value="" class="sm-form-control required" />
-								</div>
-
-								<div class="col_one_third">
-									<label for="template-contactform-email">Email <small>*</small></label>
-									<input type="email" id="template-contactform-email" name="template-contactform-email" value="" class="required email sm-form-control" />
-								</div>
-
-								<div class="col_one_third col_last">
-									<label for="template-contactform-phone">Phone</label>
-									<input type="text" id="template-contactform-phone" name="template-contactform-phone" value="" class="sm-form-control" />
-								</div>
-
-								<div class="clear"></div>
-
-								<div class="col_two_third">
-									<label for="template-contactform-subject">Subject <small>*</small></label>
-									<input type="text" id="template-contactform-subject" name="subject" value="" class="required sm-form-control" />
-								</div>
-
-								<div class="col_one_third col_last">
-									<label for="template-contactform-phone">Member ID</label>
-									<input type="text" id="template-contactform-phone" name="template-contactform-phone" value="" class="sm-form-control" />
-								</div>
-
-								<div class="clear"></div>
-
-								<div class="col_full">
-									<label for="template-contactform-message">Message <small>*</small></label>
-									<textarea class="required sm-form-control" id="template-contactform-message" name="template-contactform-message" rows="6" cols="30"></textarea>
-								</div>
-
-								<div class="col_full hidden">
-									<input type="text" id="template-contactform-botcheck" name="template-contactform-botcheck" value="" class="sm-form-control" />
-								</div>
-
-								<div class="col_full">
-									<button class="button button-3d nomargin" type="submit" id="template-contactform-submit" name="template-contactform-submit" value="submit">Send Message</button>
-								</div>
-
-								<input type="hidden" name="prefix" value="template-contactform-">
-
-							</form>
-
-						</div>
-
-					</div><!-- Contact Form End -->
-				  
-				    <div class="col_half nobottommargin col_last">
-
-						<h4 id="faq-7"><strong>Q.</strong> What Images, Videos, Code or Music Can I Use in my Items?</h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad odio ab quis architecto recusandae doloremque incidunt! Eius, quidem, pariatur necessitatibus commodi aliquid deleniti repudiandae accusantium tempora soluta vel nesciunt est quibusdam iure adipisci aspernatur maiores saepe ea eaque quo harum reprehenderit similique nemo voluptate ullam natus illum magnam alias nobis doloremque delectus ipsa dicta repellat maxime dignissimos eveniet quae debitis ratione assumenda tempore officiis fugiat dolor. Saepe iusto praesentium ullam aliquam impedit.</p>
-
-						<div class="line"></div>
-
-				    </div>
-				
-					<div class="clear"></div>
-
-					<div id="section-analytics" class="heading-block title-center nobottomborder page-section">
-						<h2>Analytics</h2>
-					</div>
-				  
-				    <script>
-        				var x = 1
-        				window.onclick = myFunction;
-        			function myFunction() {
-            		if (x = 1) {
-                		var chart1 = document.getElementById("chart");
-                		var chart2 = document.getElementById("bar-chart");
-                		var chart3 = document.getElementById("linechart");
-                		chart1.removeChild(chart2);
-                		x = 2
-            		} else {
-                		chart1.removeChild(chart3);
-            		}
-        		}
-    			</script>
-
-
-    <div id="chart">
-        <h1>Number of Homes on the Market</h1>
-        <h2>Number of Homes on the Market by Neighborhood</h2>
-        <canvas id="hbar-chart" width="800" height="450"></canvas>
-        <canvas id="bar-chart" width="800" height="450"></canvas>
-        <canvas id="linechart" width="800" height="450"></canvas>
-    </div>
-
-
-
-    <!-- <a onclick="renderBar()"></a> -->
-
-    <script src="/static/js/bar.js"></script>
-    <!-- <script src="bar.js"></script>
-      <script src="line.js"></script> -->
-				  
-				  
-				  <div class="container clearfix">
-			
-					<div class="clear"></div>
-
-					<div id="section-faqs" class="heading-block title-center nobottomborder page-section">
-						<h2>FAQS</h2>
-					</div>
-					
-				    <div class="col_half nobottommargin">
-
-						<h4 id="faq-1"><strong>Q.</strong> How do I become an author?</h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, dolorum, vero ipsum molestiae minima odio quo voluptate illum excepturi quam cum voluptates doloribus quae nisi tempore necessitatibus dolores ducimus enim libero eaque explicabo suscipit animi at quaerat aliquid ex expedita perspiciatis? Saepe, aperiam, nam unde quas beatae vero vitae nulla.</p>
-
-						<div class="line"></div>
-
-						<h4 id="faq-2"><strong>Q.</strong> Helpful Resources for Authors</h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, placeat, architecto rem dolorem dignissimos repellat veritatis in et eos doloribus magnam aliquam ipsa alias assumenda officiis quasi sapiente suscipit veniam odio voluptatum. Enim at asperiores quod velit minima officia accusamus cumque eligendi consequuntur fuga? Maiores, quasi, voluptates, exercitationem fuga voluptatibus a repudiandae expedita omnis molestiae alias repellat perferendis dolores dolor.</p>
-
-						<div class="line"></div>
-
-						<h4 id="faq-3"><strong>Q.</strong> How much money can I make?</h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus, fugiat iste nisi tempore nesciunt nemo fuga? Nesciunt, delectus laboriosam nisi repudiandae nam fuga saepe animi recusandae. Asperiores, provident, esse, doloremque, adipisci eaque alias dolore molestias assumenda quasi saepe nisi ab illo ex nesciunt nobis laboriosam iusto quia nulla ad voluptatibus iste beatae voluptas corrupti facilis accusamus recusandae sequi debitis reprehenderit quibusdam. Facilis eligendi a exercitationem nisi et placeat excepturi velit!</p>
-
-						<div class="line"></div>
-
-						<h4 id="faq-5"><strong>Q.</strong> An Introduction to the Marketplaces for Authors</h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In, quisquam atque vero delectus corrupti! Quo, maiores, dolorem, hic commodi nulla ratione accusamus doloribus fuga magnam id temporibus dignissimos deleniti quidem ipsam corporis sapiente nam expedita saepe quas ab? Vero, assumenda.</p>
-
-					</div>
-
-					<div class="col_half nobottommargin col_last">
-
-						<h4 id="faq-7"><strong>Q.</strong> What Images, Videos, Code or Music Can I Use in my Items?</h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad odio ab quis architecto recusandae doloremque incidunt! Eius, quidem, pariatur necessitatibus commodi aliquid deleniti repudiandae accusantium tempora soluta vel nesciunt est quibusdam iure adipisci aspernatur maiores saepe ea eaque quo harum reprehenderit similique nemo voluptate ullam natus illum magnam alias nobis doloremque delectus ipsa dicta repellat maxime dignissimos eveniet quae debitis ratione assumenda tempore officiis fugiat dolor. Saepe iusto praesentium ullam aliquam impedit.</p>
-
-						<div class="line"></div>
-
-						<h4 id="faq-8"><strong>Q.</strong> Can I use trademarked names in my items?</h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, nisi, laborum autem reprehenderit excepturi harum ipsum quod sit. Inventore et sunt nemo natus labore voluptate omnis reprehenderit culpa. Minus vitae molestiae totam ut a accusamus at fugiat nemo debitis delectus? Consectetur, deleniti, cupiditate ad doloribus numquam minus illum fugit laborum a voluptatum nulla at autem ab beatae odio dolorem assumenda magni laudantium saepe recusandae doloremque illo nesciunt aut quos debitis neque reiciendis veritatis iusto eos aliquid voluptatem pariatur eveniet velit?</p>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, esse, dolore, animi sed aliquam est consequatur atque magnam sunt voluptas nostrum sint minus neque iste ut velit iure eius! Hic, laudantium, consequatur veniam magnam ullam eveniet sed minus rem deleniti!</p>
-
-						<div class="line"></div>
-
-						<h4 id="faq-9"><strong>Q.</strong> Tips for Increasing Your Referral Income</h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, nisi, laborum autem reprehenderit excepturi harum ipsum quod sit. Inventore et sunt nemo natus labore voluptate omnis reprehenderit culpa. Minus vitae molestiae totam ut a accusamus at fugiat nemo debitis delectus? Consectetur, deleniti, cupiditate ad doloribus numquam minus illum fugit laborum a voluptatum nulla at autem ab beatae odio dolorem assumenda magni laudantium saepe recusandae doloremque illo nesciunt aut quos debitis neque reiciendis veritatis iusto eos aliquid voluptatem pariatur eveniet velit?</p>
-
-					</div>
-
-					<div class="clear"></div>
-				  
-					<div></div>
-
-					<div id="section-about" class="heading-block title-center nobottomborder page-section">
-						<h2>About</h2>
-						<span>Tag Line</span>
-							<h2>.</h2>
-							<h2>.</h2>
-							<h2>.</h2>
-							<h2>.</h2>
-							<h2>.</h2>
-							<h2>.</h2>
-							<h2>.</h2>
-							<h2>.</h2>
-							<h2>.</h2>
-							<h2>.</h2>
-							<h2>.</h2>
-					</div>
-					
-					<div></div>
-
-				</div>
-
-			</div>
-
-		</section><!-- #content end -->
-
-		<!-- Footer
-		============================================= -->
-		<footer id="footer" class="dark">
-
-			<div class="container">
-
-				<!-- Footer Widgets
-				============================================= -->
-				
-
-			</div>
-
-			<!-- Copyrights
-			============================================= -->
-			<div id="copyrights">
-
-				<div class="container clearfix">
-
-					<div class="col_full nobottommargin center">
-						<!--
-						<div class="copyrights-menu copyright-links clearfix">
-							<a href="#">Home</a>/<a href="#">About</a>/<a href="#">Features</a>/<a href="#">Portfolio</a>/<a href="#">FAQs</a>/<a href="#">Contact</a>
-						</div>
-						-->
-						Copyright &copy; &nbsp;2019 &nbsp;Houston &nbsp;Emergency &nbsp;Coders
-					</div>
-
-				</div>
-
-			</div><!-- #copyrights end -->
-
-		</footer><!-- #footer end -->
-	</div><!-- #wrapper end -->
-
-	<!-- Go To Top
-	============================================= -->
-	<div id="gotoTop" class="icon-angle-up"></div>
-
-	<!-- External JavaScripts
-	============================================= -->
-	<script src="/static/js/jquery.js"></script>
-	<script src="/static/js/plugins.js"></script>
-	<script src="/static/js/bar.js"></script>
-
-	<!-- Footer Scripts
-	============================================= -->
-	<script src="/static/js/functions.js"></script>
-
+<body
+<h1>Hello World</h1>
 </body>
 </html>
