doctype and return in d3.json call

--- a/templates/index.html
+++ b/templates/index.html
@@ -397,7 +397,7 @@
 
 	<!-- <script src="bar.js"></script>
        <script src="line.js"></script> -->
-	<script src="{{ url_for('static', filename='js/bar.js') }}"></script>
+	<!-- <script src="{{ url_for('static', filename='js/bar.js') }}"></script> -->
 
 
 	<!-- Footer Scripts
