style changes to charts

--- a/templates/charts.html
+++ b/templates/charts.html
@@ -33,7 +33,7 @@
     </script> -->
 
 
-    <div id="chart">
+    <div id="wrapper">
         <h1>Number of Homes on the Market</h1>
         <h2>Number of Homes on the Market by Neighborhood</h2>
         <canvas id="hbar-chart" width="800" height="450"></canvas>
