--- a/templates/charts.html
+++ b/templates/charts.html
@@ -34,8 +34,8 @@
 
 
     <div id="wrapper">
-        <h1>Number of Homes on the Market</h1>
-        <h2>Number of Homes on the Market by Neighborhood</h2>
+        <h1>Analytics Dashboard</h1>
+        <!-- <h2>Total Number of Homes for Sale by Neighbohood</h2> -->
         <canvas id="hbar-chart" width="800" height="450"></canvas>
         <canvas id="bar-chart" width="800" height="450"></canvas>
         <canvas id="linechart" width="800" height="450"></canvas>
