--- a/templates/charts.html
+++ b/templates/charts.html
@@ -4,7 +4,9 @@
 <head>
     <title>Number of Homes</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.3.0/Chart.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles2.css') }}">
+    <!-- <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles2.css') }}"> -->
+    <link rel="stylesheet" type="text/css" href="../static/css/style2.css">
+    
     <script src="https://d3js.org/d3.v5.min.js"></script>
 </head>
 
