--- a/templates/charts.html
+++ b/templates/charts.html
@@ -37,7 +37,7 @@
 
     <div id="wrapper">
         <h1>Analytics Dashboard</h1>
-        <!-- <h2>Total Number of Homes for Sale by Neighbohood</h2> -->
+        <h2>Total Number of Homes for Sale by Neighbohood</h2>
         <canvas id="hbar-chart" width="500" height="250"></canvas>
         <canvas id="bar-chart" width="500" height="250"></canvas>
         <canvas id="linechart" width="500" height="250"></canvas>
