--- a/templates/charts.html
+++ b/templates/charts.html
@@ -39,7 +39,12 @@
         <h1>Analytics Dashboard</h1>
         <h2>Total Number of Homes for Sale by Neighbohood</h2>
         <canvas id="hbar-chart" width="500" height="250"></canvas>
+        <hr>
+        <h2>Total Buyout Amount per Neighbohood of Available Listings</h2>
         <canvas id="bar-chart" width="500" height="250"></canvas>
+        <hr>
+        <h2>Number of Homes based on Days on the Market</h2>
+        <hr>
         <canvas id="linechart" width="500" height="250"></canvas>
     </div>
 
