--- a/templates/index.html
+++ b/templates/index.html
@@ -109,14 +109,14 @@
 					<nav id="primary-menu" class="style">
 						<ul>
 							<li><a href="#"><div>Home</div></a></li>
-							<li><a href="search.html"><div>Search</div></a></li>
-							<li><a href="alerts.html"><div>Alerts</div></a></li>
+							<li><a href="search"><div>Search</div></a></li>
+							<li><a href="alerts"><div>Alerts</div></a></li>
 						</ul>
 
 						<ul>
-							<li><a href="analytics.html"><div>Analytics</div></a></li>
-							<li><a href="faqs.html"><div>FAQs</div></a></li>
-							<li><a href="about.html"><div>About</div></a></li>
+							<li><a href="analytics"><div>Analytics</div></a></li>
+							<li><a href="faqs"><div>FAQs</div></a></li>
+							<li><a href="about"><div>About</div></a></li>
 						</ul>
 
 					</nav><!-- #primary-menu end -->
