--- a/templates/alerts.html
+++ b/templates/alerts.html
@@ -12,26 +12,26 @@
 		href="https://fonts.googleapis.com/css?family=Lato:300,400,400i,700|Raleway:300,400,500,600,700|Crete+Round:400i"
 		rel="stylesheet" type="text/css" />
 
-	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/bootstrap.css') }}">
-	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/style.css') }}">
-	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/dark.css') }}">
-	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/font-icons.css') }}">
-	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/animate.css') }}">
-	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/magnific-popup.css') }}">
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.css') }}">
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/dark.css') }}">
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/font-icons.css') }}">
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/animate.css') }}">
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/magnific-popup.css') }}">
 
-	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/responsive.css') }}">
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/responsive.css') }}">
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/color.css') }}">
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/color.css') }}">
 
 	<!-- SLIDER REVOLUTION 5.x CSS SETTINGS -->
-	<link rel="stylesheet" type="text/css" href="include/rs-plugin/css/settings.css" media="screen" />
-	<link rel="stylesheet" type="text/css" href="include/rs-plugin/css/layers.css">
-	<link rel="stylesheet" type="text/css" href="include/rs-plugin/css/navigation.css">
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='include/rs-plugin/css/settings.css') }}" media="screen">
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='include/rs-plugin/css/layers.css') }}">
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='include/rs-plugin/css/navigation.css') }}">
 
 	<!-- ADD-ONS CSS FILES -->
-	<link rel="stylesheet" type="text/css" href="include/rs-plugin/css/addons/revolution.addon.revealer.css">
-	<link rel="stylesheet" type="text/css" href="include/rs-plugin/css/addons/revolution.addon.revealer.preloaders.css">
-	<link rel="stylesheet" type="text/css" href="include/rs-plugin/css/addons/revolution.addon.particles.css">
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='include/rs-plugin/css/revolution.addon.revealer.css') }}">
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='include/rs-plugin/css/addons/revolution.addon.revealer.preloaders.css') }}">
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='include/rs-plugin/css/addons/revolution.addon.particles.css') }}">
 
 
 	<!-- Document Title
@@ -108,15 +108,15 @@
 					============================================= -->
 					<nav id="primary-menu" class="style">
 						<ul>
-							<li><a href="#"><div>Home</div></a></li>
-							<li><a href="search.html"><div>Search</div></a></li>
-							<li><a href="alerts.html"><div>Alerts</div></a></li>
+							<li><a href="/"><div>Home</div></a></li>
+							<li><a href="search"><div>Search</div></a></li>
+							<li><a href="#"><div>Alerts</div></a></li>
 						</ul>
 
 						<ul>
-							<li><a href="analytics.html"><div>Analytics</div></a></li>
-							<li><a href="faqs.html"><div>FAQs</div></a></li>
-							<li><a href="about.html"><div>About</div></a></li>
+							<li><a href="analytics"><div>Analytics</div></a></li>
+							<li><a href="faqs"><div>FAQs</div></a></li>
+							<li><a href="about">div>About</div></a></li>
 						</ul>
 
 					</nav><!-- #primary-menu end -->
@@ -191,7 +191,7 @@
 								 id="slide-243-layer-2"
 								 data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
 								 data-y="['middle','middle','middle','middle']" data-voffset="['20','20','20','0']"
-											data-fontsize="['20','20','20','17']"
+								data-fontsize="['20','20','20','17']"
 								data-lineheight="['30','30','25','22']"
 								data-color="['rgba(255,255,255,0.75)','rgba(255,255,255,0.65)','rgba(255,255,255,0.65)','rgba(255,255,255,0.65)']"
 								data-width="['640','481','360','260']"
@@ -216,7 +216,7 @@
 					 			id="slide-243-layer-12"
 								 data-x="['center','center','center','center']" data-hoffset="['-150','-150','0','0']"
 								 data-y="['middle','middle','middle','middle']" data-voffset="['150','140','130','100']"
-											data-lineheight="['60','60','50','50']"
+								data-lineheight="['60','60','50','50']"
 								data-width="['280','280','200','none']"
 								data-height="none"
 								data-whitespace="nowrap"
@@ -238,9 +238,9 @@
 							<a class="tp-caption rev-btn   tc-btnshadow"
 								href="analytics.html" target="_self"
 								id="slide-243-layer-13"
-								 data-x="['center','center','center','center']" data-hoffset="['150','150','0','0']"
-								 data-y="['middle','middle','middle','middle']" data-voffset="['150','140','190','160']"
-											data-lineheight="['60','60','50','50']"
+								data-x="['center','center','center','center']" data-hoffset="['150','150','0','0']"
+								data-y="['middle','middle','middle','middle']" data-voffset="['150','140','190','160']"
+								data-lineheight="['60','60','50','50']"
 								data-width="['280','280','200','none']"
 								data-height="none"
 								data-whitespace="nowrap"
