Removed extra '<' on nav bar

--- a/templates/faqs.html
+++ b/templates/faqs.html
@@ -116,7 +116,7 @@
 						<ul>
 							<li><a href="analytics"><div>Analytics</div></a></li>
 							<li><a href="#"><div>FAQs</div></a></li>
-							<li><a href="about">div>About</div></a></li>
+							<li><a href="about"><div>About</div></a></li>
 						</ul>
 
 					</nav><!-- #primary-menu end -->
