--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -116,7 +116,7 @@
 						<ul>
 							<li><a href="#"><div>Analytics</div></a></li>
 							<li><a href="faqs"><div>FAQs</div></a></li>
-							<li><a href="about">div>About</div></a></li>
+							<li><a href="about"><div>About</div></a></li>
 						</ul>
 
 					</nav><!-- #primary-menu end -->
