Revized logo link to home page

--- a/templates/about.html
+++ b/templates/about.html
@@ -98,9 +98,9 @@
 					<!-- Logo
 					============================================= -->
 					<div id="logo">
-						<a href="index.html" class="standard-logo"><img src="{{ url_for('static', filename='img/logo.png') }}"
+						<a href="/" class="standard-logo"><img src="{{ url_for('static', filename='img/logo.png') }}"
 								alt="Logo"></a>
-						<a href="index.html" class="retina-logo"><img src="{{ url_for('static', filename='img/logo@2x.png') }}"
+						<a href="/" class="retina-logo"><img src="{{ url_for('static', filename='img/logo@2x.png') }}"
 								alt="Logo"></a>
 					</div><!-- #logo end -->
 
@@ -214,8 +214,8 @@
 							<a class="tp-caption rev-btn   tc-btnshadow tp-rs-menulink"
 					 			href="search.html" target="_self"
 					 			id="slide-243-layer-12"
-								 data-x="['center','center','center','center']" data-hoffset="['-150','-150','0','0']"
-								 data-y="['middle','middle','middle','middle']" data-voffset="['150','140','130','100']"
+								data-x="['center','center','center','center']" data-hoffset="['-150','-150','0','0']"
+								data-y="['middle','middle','middle','middle']" data-voffset="['150','140','130','100']"
 								data-lineheight="['60','60','50','50']"
 								data-width="['280','280','200','none']"
 								data-height="none"
