--- a/templates/alerts.html
+++ b/templates/alerts.html
@@ -98,9 +98,9 @@
 					<!-- Logo
 					============================================= -->
 					<div id="logo">
-						<a href="index.html" class="standard-logo"><img src="{{ url_for('static', filename='img/logo.png') }}"
+						<a href="/" class="standard-logo"><img src="{{ url_for('static', filename='img/logo.png') }}"
 								alt="Logo"></a>
-						<a href="index.html" class="retina-logo"><img src="{{ url_for('static', filename='img/logo@2x.png') }}"
+						<a href="/" class="retina-logo"><img src="{{ url_for('static', filename='img/logo@2x.png') }}"
 								alt="Logo"></a>
 					</div><!-- #logo end -->
 
