--- a/templates/houston.html
+++ b/templates/houston.html
@@ -16,7 +16,7 @@
     <script src="https://d3js.org/d3.v4.min.js"></script>
 
     <!-- Our CSS -->
-    <link rel="stylesheet" type="text/css" href="static/css/style-houston.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/style-houston.css">
 
   </head>
   
@@ -29,12 +29,12 @@
          <div id="map" align="center"></div>
       </div>
     <!-- API key -->
-    <script type="text/javascript" src="static/js/config.js"></script>
+    <script type="text/javascript" src="../static/js/config.js"></script>
       <!-- JS  -->
     <!-- <script type="text/javascript" src="static/js/logic.js"></script> -->
     <!-- <script type="text/javascript" src="static/js/logic2.js"></script> -->
     <!-- <script type="text/javascript" src="static/js/logic3.js"></script> -->
-    <script type="text/javascript" src="static/js/houstonmap.js"></script>
+    <script type="text/javascript" src="../static/js/houstonmap.js"></script>
 
   </body>
 </html>
