updated br tags

--- a/templates/faqs.html
+++ b/templates/faqs.html
@@ -276,9 +276,9 @@
 							FAQs
 
 							1.    Where does the data pull from?
-							      The data is pulled from the website HAR and it is rendered in an automatic script. The script runs every day and pulls the latest information from the house listings.</b>
+							      The data is pulled from the website HAR and it is rendered in an automatic script. The script runs every day and pulls the latest information from the house listings.</br>
 							2.    How long do the listings stay on the website?
-							      You will be able to find the listings for the last 6 months. Since new listings show up every day they will be added to the list. </b>
+							      You will be able to find the listings for the last 6 months. Since new listings show up every day they will be added to the list. </br>
 							3.    Are the neighborhoods selected for this analysis included in the buyout program?
 							      Yes, the zones for the buyout program include sections of the neighborhoods that are part of this research. The entirety of the neighborhoods may not be included in the HCFCD program but homes in those specific neighborhoods are sought after for buyout.
 					</p>
