--- a/templates/index.html
+++ b/templates/index.html
@@ -142,10 +142,10 @@
 
 							<!-- LAYER NR. 1 -->
 							<div class="tp-caption tp-shape tp-shapewrapper "
-								 id="slide-243-layer-14"
-								 data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
-								 data-y="['middle','middle','middle','middle']" data-voffset="['0','0','0','0']"
-											data-width="full"
+								id="slide-243-layer-14"
+								data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
+								data-y="['middle','middle','middle','middle']" data-voffset="['0','0','0','0']"
+								data-width="full"
 								data-height="full"
 								data-whitespace="nowrap"
 
@@ -212,7 +212,7 @@
 
 							<!-- LAYER NR. 4 -->
 							<a class="tp-caption rev-btn   tc-btnshadow tp-rs-menulink"
-					 			href="search" target="_self"
+					 			href="search" target="_blank"
 					 			id="slide-243-layer-12"
 								data-x="['center','center','center','center']" data-hoffset="['-150','-150','0','0']"
 								data-y="['middle','middle','middle','middle']" data-voffset="['150','140','130','100']"
@@ -236,7 +236,7 @@
 
 							<!-- LAYER NR. 5 -->
 							<a class="tp-caption rev-btn   tc-btnshadow"
-								href="analytics.html" target="_self"
+								href="analytics" target="_blank"
 								id="slide-243-layer-13"
 								data-x="['center','center','center','center']" data-hoffset="['150','150','0','0']"
 								data-y="['middle','middle','middle','middle']" data-voffset="['150','140','190','160']"
