--- a/templates/about.html
+++ b/templates/about.html
@@ -98,9 +98,9 @@
 					<!-- Logo
 					============================================= -->
 					<div id="logo">
-						<a href="/" class="standard-logo"><img src="{{ url_for('static', filename='img/logo.png') }}"
+						<a href="/" class="standard-logo"><img src="{{ url_for('static', filename='images/logo.png') }}"
 								alt="Logo"></a>
-						<a href="/" class="retina-logo"><img src="{{ url_for('static', filename='img/logo@2x.png') }}"
+						<a href="/" class="retina-logo"><img src="{{ url_for('static', filename='images/logo@2x.png') }}"
 								alt="Logo"></a>
 					</div><!-- #logo end -->
 
@@ -137,7 +137,7 @@
 					<ul>	<!-- SLIDE  -->
 						<li class="dark" data-index="rs-243" data-transition="fadethroughdark" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off"  data-easein="default" data-easeout="default" data-masterspeed="default"  data-thumb="include/rs-plugin/demos/assets/images/buyout.jpg"  data-rotate="0"  data-saveperformance="off"  data-title="Slide" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
 							<!-- MAIN IMAGE -->
-							<img src="{{ url_for('static', filename='include/rs-plugin/demos/assets/images/dummy.png') }}"  alt=""  data-lazyload="{{ url_for('static', filename='include/rs-plugin/demos/assets/images/buyout.jpg') }}" data-bgposition="center center" data-kenburns="on" data-duration="4000" data-ease="Power3.easeInOut" data-scalestart="150" data-scaleend="100" data-rotatestart="0" data-rotateend="0" data-blurstart="0" data-blurend="0" data-offsetstart="0 0" data-offsetend="0 0" data-bgparallax="4" class="rev-slidebg" data-no-retina>
+							<img src="{{ url_for('static', filename='include/rs-plugin/demos/assets/images/dummy.png') }}"  alt=""  data-lazyload="{{ url_for('static', filename='images/buyout-orange.jpg') }}" data-bgposition="center center" data-kenburns="on" data-duration="4000" data-ease="Power3.easeInOut" data-scalestart="150" data-scaleend="100" data-rotatestart="0" data-rotateend="0" data-blurstart="0" data-blurend="0" data-offsetstart="0 0" data-offsetend="0 0" data-bgparallax="4" class="rev-slidebg" data-no-retina>
 							<!-- LAYERS -->
 
 							<!-- LAYER NR. 1 -->
@@ -208,7 +208,7 @@
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[0,0,0,0]"
 
-								style="z-index: 7; min-width: 640px; max-width: 640px; white-space: normal; font-size: 20px; line-height: 30px; font-weight: 400; color: rgba(255,255,255,0.75); letter-spacing: px;font-family:Montserrat;">Early &nbsp;Property &nbsp;Listings </div>
+								style="z-index: 7; min-width: 640px; max-width: 640px; white-space: normal; font-size: 20px; line-height: 30px; font-weight: 400; color: rgba(255,255,255,0.75); letter-spacing: px;font-family:Montserrat;"></div>
 
 							<!-- LAYER NR. 4 -->
 							<a class="tp-caption rev-btn   tc-btnshadow tp-rs-menulink"
