--- a/templates/search.html
+++ b/templates/search.html
@@ -280,7 +280,13 @@
     				<!-- map div -->
          			<div id="map" align="center"></div>
 						
-      				</div>
+				<!-- Key -->
+    				<script type="text/javascript" src="../static/js/config.js"></script>
+      
+				<!-- Houston JS -->
+    				<script type="text/javascript" src="../static/js/houstonmap.js"></script>
+						
+      				</div>	
 
 				</div>
 
@@ -349,11 +355,11 @@
 <script src="{{ url_for('static', filename='include/rs-plugin/js/extensions/revolution.extension.slideanims.min.js') }}"></script>
 <script src="{{ url_for('static', filename='include/rs-plugin/js/extensions/revolution.extension.video.min.js') }}"></script>
 
-<!-- KEY -->
+<!-- KEY 
 <script src="{{ url_for('static', filename='js/config.js') }}"></script>
       
-<!-- HOUSTON MAP JS  -->
-<script src="{{ url_for('static', filename='js/houstonmap.js') }}"></script>
+HOUSTON MAP JS 
+<script src="{{ url_for('static', filename='js/houstonmap.js') }}"></script> -->
 
 
 <!-- ADD-ONS JS FILES -->   
