--- a/templates/search.html
+++ b/templates/search.html
@@ -291,8 +291,19 @@
     <script type="text/javascript" src="../static/js/config.js"></script>
       
     <script type="text/javascript" src="../static/js/houstonmap.js"></script>
+					
+			<div class="container clearfix">
+					
+				<div id="map-container" position="center">  
+
+    				<!-- map div -->
+         			<div id="map" align="center"></div>
+						
+      					</div>
 
 				</div>
+					
+			</div>
 
 			</div>
 
