--- a/templates/search.html
+++ b/templates/search.html
@@ -281,9 +281,13 @@
 				<div class="container clearfix">
 					
 					<div id="map-container" position="center">  
-
-    					<!-- map div -->
+						
          				<div id="map" align="center"></div>
+						
+					</div>
+						
+					<div id="map-container" position="center">  
+
          				<div id="map" align="center"></div>
 						
       					</div>
