update analytics test

--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -273,7 +273,7 @@
 
 				<div class="container clearfix">
 					
-				<p align="center"><iframe src="https://county-flood-control.herokuapp.com/analytics" width=1200 height=2135
+				<p align="center"><iframe src="//county-flood-control.herokuapp.com/analytics" width=1200 height=2135
 										  00 style="text-align: center"></iframe></p>
 					
 				</div>
