Updated analytics file

--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -273,8 +273,7 @@
 
 				<div class="container clearfix">
 					
-				<p align="center"><iframe src="//county-flood-control.herokuapp.com/analytics" width=1200 height=2135
-										  00 style="text-align: center"></iframe></p>
+				<p align="center"><iframe src="//county-flood-control.herokuapp.com/charts" width=1200 height=2135 style="text-align: center"></iframe></p>
 					
 				</div>
 
