Updated page titles and nav bar

--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -36,7 +36,7 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>Home Buyout Program</title>
+	<title>Analytics</title>
 
 	<style>
 
@@ -114,9 +114,9 @@
 						</ul>
 
 						<ul>
-							<li><a href="analytics"><div>Analytics</div></a></li>
+							<li><a href="#"><div>Analytics</div></a></li>
 							<li><a href="faqs"><div>FAQs</div></a></li>
-							<li><a href=""><div>About</div></a></li>
+							<li><a href="about"><div>About</div></a></li>
 						</ul>
 
 					</nav><!-- #primary-menu end -->
@@ -212,7 +212,7 @@
 
 							<!-- LAYER NR. 4 -->
 							<a class="tp-caption rev-btn   tc-btnshadow tp-rs-menulink"
-					 			href="search" target="_self"
+					 			href="search"
 					 			id="slide-243-layer-12"
 								data-x="['center','center','center','center']" data-hoffset="['-150','-150','0','0']"
 								data-y="['middle','middle','middle','middle']" data-voffset="['150','140','130','100']"
@@ -236,7 +236,7 @@
 
 							<!-- LAYER NR. 5 -->
 							<a class="tp-caption rev-btn   tc-btnshadow"
-								href="analytics.html" target="_self"
+								href="analytics"
 								id="slide-243-layer-13"
 								data-x="['center','center','center','center']" data-hoffset="['150','150','0','0']"
 								data-y="['middle','middle','middle','middle']" data-voffset="['150','140','190','160']"
