--- a/templates/index.html
+++ b/templates/index.html
@@ -212,7 +212,7 @@
 
 							<!-- LAYER NR. 4 -->
 							<a class="tp-caption rev-btn   tc-btnshadow tp-rs-menulink"
-					 			href="search" target="_blank"
+					 			href="search"
 					 			id="slide-243-layer-12"
 								data-x="['center','center','center','center']" data-hoffset="['-150','-150','0','0']"
 								data-y="['middle','middle','middle','middle']" data-voffset="['150','140','130','100']"
@@ -236,7 +236,7 @@
 
 							<!-- LAYER NR. 5 -->
 							<a class="tp-caption rev-btn   tc-btnshadow"
-								href="analytics" target="_blank"
+								href="analytics"
 								id="slide-243-layer-13"
 								data-x="['center','center','center','center']" data-hoffset="['150','150','0','0']"
 								data-y="['middle','middle','middle','middle']" data-voffset="['150','140','190','160']"
@@ -278,33 +278,6 @@
 			</div>
 
 		</section><!-- #content end -->
-
-		<!-- Footer
-		============================================= -->
-		<footer id="footer" class="dark">
-
-			<div class="container">
-
-				<!-- Footer Widgets
-				============================================= -->
-			</div>
-
-			<!-- Copyrights
-			============================================= -->
-			<div id="copyrights">
-
-				<div class="container clearfix">
-
-					<div class="col_full nobottommargin center">
-
-						Copyright &copy; &nbsp;2019 &nbsp;Houston &nbsp;Emergency &nbsp;Coders
-					</div>
-
-				</div>
-
-			</div><!-- #copyrights end -->
-
-		</footer><!-- #footer end -->
 
 	</div><!-- #wrapper end -->
 
