--- a/templates/search.html
+++ b/templates/search.html
@@ -43,7 +43,7 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>Home Buyout Program</title>
+	<title> Listing Search </title>
 
 	<style>
 
@@ -219,7 +219,7 @@
 
 							<!-- LAYER NR. 4 -->
 							<a class="tp-caption rev-btn   tc-btnshadow tp-rs-menulink"
-					 			href="search" target="_self"
+					 			href="search"
 					 			id="slide-243-layer-12"
 								data-x="['center','center','center','center']" data-hoffset="['-150','-150','0','0']"
 								data-y="['middle','middle','middle','middle']" data-voffset="['150','140','130','100']"
@@ -243,7 +243,7 @@
 
 							<!-- LAYER NR. 5 -->
 							<a class="tp-caption rev-btn   tc-btnshadow"
-								href="analytics.html" target="_self"
+								href="analytics"
 								id="slide-243-layer-13"
 								data-x="['center','center','center','center']" data-hoffset="['150','150','0','0']"
 								data-y="['middle','middle','middle','middle']" data-voffset="['150','140','190','160']"
