Updated alert page

--- a/templates/alerts.html
+++ b/templates/alerts.html
@@ -278,7 +278,7 @@
 					<div>
 
 						<div class="fancy-title title-dotted-border">
-							<h3>Send New Listing Email Alert</h3>
+							<h3>New Listing Email Alerts</h3>
 						</div>
 
 						<div class="form-widget">
