Updated contact file

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -279,7 +279,7 @@
 					============================================= -->
 					<div class="postcontent nobottommargin">
 
-						<h3>Send us an Email</h3>
+						<h3>Contact Us</h3>
 
 						<div class="form-widget">
 
@@ -340,6 +340,7 @@
 								<input type="hidden" name="prefix" value="template-contactform-">
 
 							</form>
+							
 						</div>
 
 					</div><!-- .postcontent end -->
