Updated contact form

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -184,7 +184,7 @@
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[0,0,0,0]"
 
-								style="z-index: 6; min-width: 800px; max-width: 800px; white-space: normal; font-size: 80px; line-height: 80px; font-weight: 600; color: #ffffff; letter-spacing: -5px;font-family:Montserrat;"> Alert &nbsp;System </div>
+								style="z-index: 6; min-width: 800px; max-width: 800px; white-space: normal; font-size: 80px; line-height: 80px; font-weight: 600; color: #ffffff; letter-spacing: -5px;font-family:Montserrat;"> Contact &nbsp;Us </div>
 
 							<!-- LAYER NR. 3 -->
 							<div class="tp-caption  "
@@ -256,7 +256,7 @@
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[50,50,20,20]"
 
-								style="z-index: 9; min-width: 280px; max-width: 280px; white-space: nowrap; font-size: 17px; line-height: 60px; font-weight: 400; color: rgba(255,255,255,1); letter-spacing: px;font-family:Montserrat;background-color:rgb(0,109,210);border-radius:30px 30px 30px 30px;outline:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;"><i class="icon-cloud-download" style="font-size:17px;margin-right:5px;"></i> Analytics &nbsp;Data </a>
+								style="z-index: 9; min-width: 280px; max-width: 280px; white-space: nowrap; font-size: 17px; line-height: 60px; font-weight: 400; color: rgba(255,255,255,1); letter-spacing: px;font-family:Montserrat;background-color:rgb(0,109,210);border-radius:30px 30px 30px 30px;outline:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;"><i class="icon-cloud-download" style="font-size:17px;margin-right:5px;"></i> Listing &nbsp;Search </a>
 						</li>
 					  </ul>
 					<div class="tp-bannertimer tp-bottom" style="visibility: hidden !important;"></div>
@@ -317,8 +317,8 @@
 								</div>
 
 								<div class="col_one_third col_last">
-									<label for="template-contactform-employee">Employee ID</label>
-									<input type="text" id="template-contactform-employee" name="template-contactform-employee" value=""
+									<label for="template-contactform-employee">Department</label>
+									<input type="text" id="template-contactform-department" name="template-contactform-department" value=""
 										class="required sm-form-control" />
 
 									<div class="clear"></div>
@@ -332,9 +332,6 @@
 								<input type="text" id="template-contactform-botcheck" name="template-contactform-botcheck" value="" class="sm-form-control" />
 							</div>
 
-									
-									<br>
-									<br>
 
 									<div class="col_full">
 										<button class="button button-3d nomargin" type="submit" id="template-contactform-submit"
