Updated contact and alert forms

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -311,10 +311,10 @@
 									<label for="template-contactform-service">Services</label>
 									<select id="template-contactform-service" name="template-contactform-service" class="sm-form-control">
 										<option value="">-- Select One --</option>
-										<option value="Wordpress">Wordpress</option>
-										<option value="PHP / MySQL">PHP / MySQL</option>
-										<option value="HTML5 / CSS3">HTML5 / CSS3</option>
-										<option value="Graphic Design">Graphic Design</option>
+										<option value="Wordpress">Question</option>
+										<option value="PHP / MySQL">Meeting</option>
+										<option value="HTML5 / CSS3">Feature Request</option>
+										<option value="Graphic Design">App Consulting</option>
 									</select>
 								</div>
 
