--- a/templates/alerts.html
+++ b/templates/alerts.html
@@ -323,22 +323,15 @@
 
 									<div class="clear"></div>
 
-									<div class="col_full hidden">
-										<input type="text" id="template-contactform-botcheck" name="template-contactform-botcheck" value=""
-											class="required sm-form-control" />
-									</div>
-									
-									<div class="clear"></div>
-									
-									<br>
-									<br>
+								<div class="col_full hidden">
+									<input type="text" id="template-contactform-botcheck" name="template-contactform-botcheck" value="" class="sm-form-control" />
+								</div>
 
-									<div class="col_full">
-										<button class="button button-3d nomargin" type="submit" id="template-contactform-submit"
-											name="template-contactform-submit" value="submit">Activate &nbsp;Alerts</button>
-									</div>
+								<div class="col_full">
+									<button class="button button-3d nomargin" type="submit" id="template-contactform-submit" name="template-contactform-submit" value="submit">Activate &nbsp;Alerts</button>
+								</div>
 
-									<input type="hidden" name="prefix" value="template-contactform-">
+								<input type="hidden" name="prefix" value="template-contactform-">
 
 							</form>
 
