Updated alerts form

--- a/templates/alerts.html
+++ b/templates/alerts.html
@@ -332,6 +332,8 @@
 								</div>
 
 								<input type="hidden" name="prefix" value="template-contactform-">
+									
+								</div>
 
 							</form>
 
