--- a/templates/alerts.html
+++ b/templates/alerts.html
@@ -36,7 +36,7 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>Alert System</title>
+	<title>Contact Us</title>
 
 	<style>
 
@@ -256,7 +256,7 @@
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[50,50,20,20]"
 
-								style="z-index: 9; min-width: 280px; max-width: 280px; white-space: nowrap; font-size: 17px; line-height: 60px; font-weight: 400; color: rgba(255,255,255,1); letter-spacing: px;font-family:Montserrat;background-color:rgb(0,109,210);border-radius:30px 30px 30px 30px;outline:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;"><i class="icon-cloud-download" style="font-size:17px;margin-right:5px;"></i> Analytics &nbsp;Data </a>
+								style="z-index: 9; min-width: 280px; max-width: 280px; white-space: nowrap; font-size: 17px; line-height: 60px; font-weight: 400; color: rgba(255,255,255,1); letter-spacing: px;font-family:Montserrat;background-color:rgb(0,109,210);border-radius:30px 30px 30px 30px;outline:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;"><i class="icon-cloud-download" style="font-size:17px;margin-right:5px;"></i> Data &nbsp;Analytics </a>
 						</li>
 					  </ul>
 					<div class="tp-bannertimer tp-bottom" style="visibility: hidden !important;"></div>
@@ -272,56 +272,52 @@
 			<div class="content-wrap">
 
 				<div class="container clearfix">
-					
-					<!-- Contact Form
-					============================================= -->
-					<div>
 
-						<div class="fancy-title title-dotted-border">
-							<h3>New Listing Email Alerts</h3>
-						</div>
+						<!-- Contact Form
+						============================================= -->
+						<h3>Send Email Alert Notifications</h3>
 
 						<div class="form-widget">
 
 							<div class="form-result"></div>
 
-							<form class="nobottommargin" id="template-contactform" name="template-contactform"
-								action="include/form.php" method="post">
+							<form class="nobottommargin" id="template-contactform" name="template-contactform" action="include/form.php" method="post">
 
 								<div class="form-process"></div>
 
 								<div class="col_one_third">
 									<label for="template-contactform-name">Name <small>*</small></label>
-									<input type="text" id="template-contactform-name" name="template-contactform-name" value=""
-										class="required sm-form-control" />
+									<input type="text" id="template-contactform-name" name="template-contactform-name" value="" class="sm-form-control required" />
 								</div>
 
 								<div class="col_one_third">
 									<label for="template-contactform-email">Email <small>*</small></label>
-									<input type="email" id="template-contactform-email" name="template-contactform-email" value=""
-										class="required email sm-form-control" />
+									<input type="email" id="template-contactform-email" name="template-contactform-email" value="" class="required email sm-form-control" />
 								</div>
 
 								<div class="col_one_third col_last">
 									<label for="template-contactform-phone">Phone</label>
-									<input type="text" id="template-contactform-phone" name="template-contactform-phone" value=""
-										class="required sm-form-control" />
+									<input type="text" id="template-contactform-phone" name="template-contactform-phone" value="" class="sm-form-control" />
 								</div>
 
 								<div class="clear"></div>
 
 								<div class="col_two_third">
 									<label for="template-contactform-subject">Subject <small>*</small></label>
-									<input type="text" id="template-contactform-subject" name="subject" value=""
-										class="required sm-form-control" />
+									<input type="text" id="template-contactform-subject" name="subject" value="" class="required sm-form-control" />
 								</div>
 
 								<div class="col_one_third col_last">
-									<label for="template-contactform-employee">Employee ID</label>
-									<input type="text" id="template-contactform-employee" name="template-contactform-employee" value=""
-										class="required sm-form-control" />
+									<label for="template-contactform-department">Department <small>*</small></label>
+									<input type="text" id="template-contactform-department" name="subject" value="" class="required sm-form-control" />
+								</div>
 
-									<div class="clear"></div>
+								<div class="clear"></div>
+
+								<div class="col_full">
+									<label for="template-contactform-message">Message <small>*</small></label>
+									<textarea class="required sm-form-control" id="template-contactform-message" name="template-contactform-message" rows="6" cols="30"></textarea>
+								</div>
 
 								<div class="col_full hidden">
 									<input type="text" id="template-contactform-botcheck" name="template-contactform-botcheck" value="" class="sm-form-control" />
@@ -332,20 +328,17 @@
 								</div>
 
 								<input type="hidden" name="prefix" value="template-contactform-">
-									
-								</div>
 
 							</form>
-
+							
 						</div>
-
-					</div><!-- Contact Form End -->
 
 				</div>
 
 			</div>
 
 		</section><!-- #content end -->
+
 
 		<!-- Footer
 		============================================= -->
