Expanded site to 8 pages

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -107,17 +107,21 @@
 					<!-- Primary Navigation
 					============================================= -->
 					<nav id="primary-menu" class="style">
+						<nav id="primary-menu" class="style">
 						<ul>
 							<li><a href="/"><div>Home</div></a></li>
-							<li><a href="search"><div>Search</div></a></li>
 							<li><a href="alerts"><div>Alerts</div></a></li>
+							<li><a href="county"><div>County</div></a></li>
+							<li><a href="neighborhood"><div>Neighborhood</div></a></li>
 						</ul>
 
 						<ul>
 							<li><a href="analytics"><div>Analytics</div></a></li>
 							<li><a href="faqs"><div>FAQs</div></a></li>
+							<li><a href="#"><div>Contact</div></a></li>
 							<li><a href="about"><div>About</div></a></li>
 						</ul>
+
 
 					</nav><!-- #primary-menu end -->
 
