--- a/templates/faqs.html
+++ b/templates/faqs.html
@@ -109,15 +109,18 @@
 					<nav id="primary-menu" class="style">
 						<ul>
 							<li><a href="/"><div>Home</div></a></li>
-							<li><a href="search"><div>Search</div></a></li>
 							<li><a href="alerts"><div>Alerts</div></a></li>
+							<li><a href="county"><div>County</div></a></li>
+							<li><a href="neighborhood"><div>Neighborhood</div></a></li>
 						</ul>
 
 						<ul>
 							<li><a href="analytics"><div>Analytics</div></a></li>
 							<li><a href="#"><div>FAQs</div></a></li>
+							<li><a href="contact"><div>Contact</div></a></li>
 							<li><a href="about"><div>About</div></a></li>
 						</ul>
+
 
 					</nav><!-- #primary-menu end -->
 
