Updated all 8 page menu links

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -111,12 +111,12 @@
 						<ul>
 							<li><a href="/"><div>Home</div></a></li>
 							<li><a href="alerts"><div>Alerts</div></a></li>
+							<li><a href="analytics"><div>Analytics</div></a></li>
 							<li><a href="county"><div>County</div></a></li>
-							<li><a href="neighborhood"><div>Neighborhood</div></a></li>
 						</ul>
 
 						<ul>
-							<li><a href="analytics"><div>Analytics</div></a></li>
+							<li><a href="neighborhoods"><div>Neighborhoods</div></a></li>
 							<li><a href="faqs"><div>FAQs</div></a></li>
 							<li><a href="#"><div>Contact</div></a></li>
 							<li><a href="about"><div>About</div></a></li>
