--- a/templates/index.html
+++ b/templates/index.html
@@ -108,7 +108,7 @@
 					============================================= -->
 					<nav id="primary-menu" class="style">
 						<ul>
-							<li><a href="/"><div>Home</div></a></li>
+							<li><a href="#"><div>Home</div></a></li>
 							<li><a href="alerts"><div>Alerts</div></a></li>
 							<li><a href="analytics"><div>Analytics</div></a></li>
 							<li><a href="county"><div>County</div></a></li>
