--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -111,17 +111,16 @@
 						<ul>
 							<li><a href="/"><div>Home</div></a></li>
 							<li><a href="alerts"><div>Alerts</div></a></li>
+							<li><a href="#"><div>Analytics</div></a></li>
 							<li><a href="county"><div>County</div></a></li>
-							<li><a href="neighborhood"><div>Neighborhood</div></a></li>
 						</ul>
 
 						<ul>
-							<li><a href="#"><div>Analytics</div></a></li>
+							<li><a href="neighborhoods"><div>Neighborhoods</div></a></li>
 							<li><a href="faqs"><div>FAQs</div></a></li>
 							<li><a href="contact"><div>Contact</div></a></li>
 							<li><a href="about"><div>About</div></a></li>
 						</ul>
-
 
 
 					</nav><!-- #primary-menu end -->
