Updated index footer

--- a/templates/index.html
+++ b/templates/index.html
@@ -511,10 +511,31 @@
 				
 			</div><!-- END SLIDER -->
 
-		</section>
+		</section><!-- #content end -->
+
+		<!-- Footer
+		============================================= -->
+		<footer id="footer" class="dark">
+
+			<!-- Copyrights
+			============================================= -->
+			<div id="copyrights">
+
+				<div class="container clearfix">
+
+					<div class="col_full nobottommargin center">
+
+						Copyright &copy; &nbsp;2019 &nbsp;Houston &nbsp;Emergency &nbsp;Coders
+					</div>
+
+				</div>
+
+			</div><!-- #copyrights end -->
+
+		</footer><!-- #footer end -->
 
 	</div><!-- #wrapper end -->
-
+	
 	<!-- External JavaScripts
 	============================================= -->
 
