--- a/templates/neighborhoodsBU.html
+++ b/templates/neighborhoodsBU.html
@@ -45,7 +45,7 @@
 
 		<!-- Header
 		============================================= -->
-		<header id="header" class="split-menu transparent-header dark clearfix">
+		<header id="header" class="transparent-header split-menu">
 
 			<div id="header-wrap">
 
