Update page headers

--- a/templates/alerts.html
+++ b/templates/alerts.html
@@ -87,7 +87,7 @@
 
 		<!-- Header
 		============================================= -->
-		<header id="header" class="split-menu">
+		<header id="header" class="split-menu clearfix">
 
 			<div id="header-wrap">
 
