--- a/templates/about.html
+++ b/templates/about.html
@@ -36,7 +36,7 @@
 
 		<!-- Header
 		============================================= -->
-		<header id="header" class="split-menu dark clearfix">
+		<header id="header" class="split-menu clearfix">
 
 			<div id="header-wrap">
 
@@ -84,8 +84,8 @@
 		<section id="page-title" class="page-title-parallax" style="background-image: url({{ url_for('static', filename='images/page-header-test.jpg') }}); padding: 120px 0;" data-bottom-top="background-position:0px 300px;" data-top-bottom="background-position:0px -300px;">
 
 			<div class="container clearfix">
-				<h1 data-animate="fadeInUp">About</h1>
-				<span data-animate="fadeInUp" data-delay="300">Project Background</span>
+				<h1 data-animate="fadeInUp" data-delay="300">About</h1>
+				<span data-animate="fadeInUp" data-delay="300"></span>
 			</div>
 
 		</section><!-- #page-title end -->
