--- a/templates/faqs.html
+++ b/templates/faqs.html
@@ -157,6 +157,8 @@
 			</div>
 			
 			<div class="content-wrap">
+
+				<div class="container clearfix">
 					
 					<!-- Post Content 2
 					============================================= -->
@@ -212,9 +214,12 @@
 
 					</div><!-- .postcontent end -->
 
+				</div>
+
 			</div>
 
 		</section><!-- #content end -->
+
 
 		<!-- Footer
 		============================================= -->
